<resources>
    <string name="app_name">Study Timer App</string>
    <string name="lastStudyHoursText">You spent 00:00 on … last time.</string>
    <string name="timerText">00:00</string>
    <string name="play_button_text">Play</string>
    <string name="pause_button_text">Pause</string>
    <string name="stop_button_text">Stop</string>
    <string name="enter_your_task">Enter your task:</string>
    <string name="enter_task">Enter task</string>
</resources>